solved pressing enter to search location on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,8 @@ input {
   border: 1px solid white;
 }
 .search-btn {
+  background-color: transparent;
+  border: 0 solid transparent;
   position: absolute;
   right: 10px;
   top: 15%;
